--- a/ViteBusiness/Assets/zh-Hans.lproj/Localizable.strings
+++ b/ViteBusiness/Assets/zh-Hans.lproj/Localizable.strings
@@ -153,7 +153,7 @@
 "balance.info.detail.send.button.title" = "转账";
 "balance.info.detail.vote" = "投票";
 "balance.info.detail.pledge" = "获取配额";
-"balance.info.detail.exchange.vite" = "置换Vite";
+"balance.info.detail.exchange.vite" = "置换 VITE";
 "balance.info.detail.pledge.count.content" = "配额 %@ UTPS";
 "balance.info.detail.onroad.amount.content" = "%@ 在途";
 
@@ -195,7 +195,7 @@
 "send.page.quota.content" = "%@ UTPS";
 
 /* eth vite exchange */
-"eth.vite.exchange.page.title" = "置换VITE";
+"eth.vite.exchange.page.title" = "置换 VITE";
 "eth.vite.exchange.page.my.address.title" = "ETH地址";
 "eth.vite.exchange.page.my.balance.title" = "余额";
 "eth.vite.exchange.page.to.address.title" = "VITE地址";
