--- a/ViteBusiness/Assets/en.lproj/Localizable.strings
+++ b/ViteBusiness/Assets/en.lproj/Localizable.strings
@@ -446,13 +446,13 @@
 "grin.tx.useVite" = "Use VITE Address";
 "grin.sent.useVite.desc" = "Transfer GRIN through VITE address is sharing transaction file encrypted by Vite through VITE address, which ensures only the real recipient can decrypt the file.";
 "grin.sent.useHttp" = "Use HTTP Address";
-"grin.sent.useHttp.desc" = "您可以给任何支持GRIN HTTP地址转账的钱包转账，如果您给Vite钱包用户转账GRIN，我们不建议使用HTTP地址。";
+"grin.sent.useHttp.desc" = "You can transfer GRIN to any wallet supporting receiving GRIN through HTTP address, however we suggest using VITE address or file to transfer GRIN to users who use Vite wallet.";
 "grin.sent.useFile" = "Use Transaction File";
 "grin.know" = "I know";
 "grin.notSeeAgain" = "Don't show me again";
 "grin.sent.title" = "GRIN Transfer";
 "grin.sent.amount" = "Amount";
-"grin.receive.ture.amount" = "实收金额";
+"grin.receive.ture.amount" = "Actual Amount";
 "grin.sent.fee" = "Fees";
 "grin.sent.creatFile" = "Generate Transaction File";
 "grin.shareFile.desc" = "Please sign for the transaction";
@@ -507,52 +507,52 @@
 "grin.creat.syncronizing" = "Creat and sync, 3 mins estimated";
 "grin.recover.syncronizing" = "Recover and sync, 3 mins estimated";
 "grin.creating" = "Grin wallet initializing, please wait a moment.";
-"grin.pay.title.creat" = "创建交易";
-"grin.pay.title.finalize" = "敲定交易";
+"grin.pay.title.creat" = "Create";
+"grin.pay.title.finalize" = "Finalize";
 
-"grin.teach.file.send.desc" = "使用Vite钱包转账，您只需将生成的交易文件分享给收款人，得到收款人返回的确认收款文件后使用Vite钱包将其打开并敲定交易。点击分享交易文件后，Vite钱包将会打开您手机中可用的App，您可以选择任何您想使用的分享方式，您也可以选择将文件保存至手机，自行分享。";
-"grin.teach.file.receive.desc" = "使用Vite钱包收款，您只需选择使用Vite钱包打开收款文件，点击签收并分享按钮，将确认收款文件返还给转账人即可。点击签收并分享后，Vite钱包将会打开您手机中可用的App，您可以选择任何您想使用的分享方式，您也可以选择将文件保存至手机，自行分享。Vite钱包支持.grinslate文件和.json文件，只有当您收到的交易文件包含“response”，Vite钱包才能识别其为一个收款文件并成功打开。";
-"grin.teach.file.send.title" = "使用交易文件转账GRIN";
-"grin.teach.file.receive.title" = "使用交易文件接收GRIN";
-"grin.teach.http.receive.copyHttpAddress" = "复制HTTP地址";
-"grin.teach.vite.receive.copyViteAddress" = "复制VITE地址";
-"grin.teach.vite.send.startSend" = "开始转账";
-"grin.txMethod.http" = "HTTP地址";
-"grin.txMethod.vite" = "VITE地址";
-"grin.txMethod.file" = "文件交易";
+"grin.teach.file.send.desc" = "To transfer using Vite wallet, all you need to do is to share the transaction file with the recipient, open the file returned by the recipient by Vite wallet and finalize the transaction. After clicking \"Share the transaction file\", Vite wallet will show App usable in your mobile phone, you can choose whichever way you like, you can also save the file into your mobilephone and share by yourself.";
+"grin.teach.file.receive.desc" = "To transfer using Vite wallet, all you need to do is to open the file, click the \"Receive and share\" button, and return the confirm-to-receive file with the sender. After clicking \"Receive and share\",Vite wallet will show App usable in your mobile phone, you can choose whichever way you like, you can also save the file into your mobilephone and share by yourself. Vite wallet supports .grinslate file and .json file, and only when the file name containing \"response\" will it be recognized and opened successfully.";
+"grin.teach.file.send.title" = "Transfer GRIN through Transaction File";
+"grin.teach.file.receive.title" = "Receive GRIN through Transaction File";
+"grin.teach.http.receive.copyHttpAddress" = "Copy HTTP Address";
+"grin.teach.vite.receive.copyViteAddress" = "Copy VITE Address";
+"grin.teach.vite.send.startSend" = "Start to Transfer";
+"grin.txMethod.http" = "HTTP Address";
+"grin.txMethod.vite" = "VITE Address";
+"grin.txMethod.file" = "File Transaction";
 
-"grin.detail.fromMine" = "挖矿所得";
-"grin.detail.txStatus" = "交易状态";
-"grin.detail.txCompleted" = "交易已完成。";
-"grin.detail.txCancelled" = "交易已取消。";
-"grin.detail.txFileReecivedAndCanShare" = "交易已签收，请将交易文件分享给转账人，您可以选择任何您喜欢的转账方式。";
-"grin.detail.txReceived" = "交易已签收";
-"grin.detail.txReceivedAndCanAskGatewaytoSend" = "您的钱包已签收交易，若交易长时间未进入已确认状态，请点击请求网关重发。";
-"grin.detail.txNotReceivedAndCanAskGatewaytoSend" = "若长时间未进入已签收状态，请点击请求网关重发。";
-"grin.detail.gateway.confirmConntLessThanTen" = "Vite网关交易已确认，网关确认数达到10个后将向您转账。";
-"grin.detail.gateway.confirmConntBiggerThanTen" = "Vite网关确认数达到10个，若长时间未进入待签收状态，请点击请求网关重发。";
-"grin.detail.confirmLessThanThen" = "交易已确认，确认数达到10个后，实收金额会进入可用余额。";
-"grin.detail.gateway" = "Vite网关代收";
-"grin.detail.gatewayReceived" = "Vite网关已经签收交易，网关确认数达到10个后将向您转账。";
-"grin.detail.txpostingAndCanRepost" = "交易已经开始广播，若长时间交易未确认，可点击重新广播进行重试。";
-"grin.detail.pleaseFinalize" = "请敲定交易。";
-"grin.detail.pleaseFinalize2" = "请敲定广播。";
-"grin.detail.txFileCreatedAndCanShare" = "交易文件已创建，请确保将交易文件分享给收款人（您可以选择任何您喜欢的分享方式）并要求返回一个签收交易文件。";
-"grin.detail.txFile" = "交易文件";
-"grin.detail.txFinaziledAndPosting" = "交易已敲定并开始广播。";
-"grin.detail.txisPostingPlsWait" = "交易正在广播中，请等待确认。";
-"grin.detail.waitHerOpenViteWalletToReceive" = "请等待收款人打开Vite钱包接收交易。";
-"grin.detail.pleaseReciveAndShare" = "请签收交易并将交易文件分享给转账人，您可以选择任何您喜欢的转账方式。";
-"grin.detail.gatewaysend" = "VITE交易代转";
-"grin.detail.repoat" = "重新广播";
-"grin.node.configNode" = "配置全节点";
-"grin.node.addNode" = "添加全节点";
-"grin.node.edit.nodeAddressTitle" = "全节点地址";
-"grin.node.edit.apiSecretTitle" = "秘钥";
-"grin.node.select.canNotConnect" = "未能连接到全节点";
-"grin.detail.slateCopied" = "已复制Slate ID";
-"grin.send.illegalAmmount" = "转账金额不合法";
-"grin.detail.gatewayResend" = "请求网管重发";
+"grin.detail.fromMine" = "Coinbase";
+"grin.detail.txStatus" = "Transaction State";
+"grin.detail.txCompleted" = "Transaction has completed.";
+"grin.detail.txCancelled" = "Transaction has been canceled.";
+"grin.detail.txFileReecivedAndCanShare" = "Transaction has been received, please share the file with the sender, you can choose the way as you like.";
+"grin.detail.txReceived" = "Transaction has been received.";
+"grin.detail.txReceivedAndCanAskGatewaytoSend" = "You have already received the transaction, if the state doesn't go to \"Confirmed\", please try \"Request for Vite gateway to resend\".";
+"grin.detail.txNotReceivedAndCanAskGatewaytoSend" = "If the state stays \"Awaiting for Signature\" for a long time, please try \"Request for Vite gateway to resend\".";
+"grin.detail.gateway.confirmConntLessThanTen" = "Vite gateway has received the transaction, and will transfer to you after 10 confirmations.";
+"grin.detail.gateway.confirmConntBiggerThanTen" = "Vite gateway confirmation has reached 10, if the state not changing to \"Awaiting for Signature\" for a long time, please try \"Request for Vite gateway to resend\".";
+"grin.detail.confirmLessThanThen" = "Transaction has been confirmed, after 10 confirmation, \"Actual Amount\" will go to \"Spendable Amount\".";
+"grin.detail.gateway" = "Vite Gateway Collection";
+"grin.detail.gatewayReceived" = "Vite gateway has received the transaction, and will transfer to you after 10 confirmations.";
+"grin.detail.txpostingAndCanRepost" = "Transaction has started to be broadcast, you can click \"Repost\" to try again if the transaction hasn't been confirmed for long";
+"grin.detail.pleaseFinalize" = "Please finalize the transaction";
+"grin.detail.pleaseFinalize2" = "Please wait for the transaction to be broadcast";
+"grin.detail.txFileCreatedAndCanShare" = "Transaction file has been created, please make sure to share the file with the recipient(share as you like)and ask for a received file returned.";
+"grin.detail.txFile" = "Transaction File";
+"grin.detail.txFinaziledAndPosting" = "Transaction has been finalized and broadcast.";
+"grin.detail.txisPostingPlsWait" = "Transaction is in broadcast, please wait for confirmation.";
+"grin.detail.waitHerOpenViteWalletToReceive" = "Please wait for the recipient to open Vite wallet and receive the transaction.";
+"grin.detail.pleaseReciveAndShare" = "Please sign the transaction and share the file with the sender, you can choose whichever way you prefer.";
+"grin.detail.gatewaysend" = "VITE Transaction Transfer";
+"grin.detail.repoat" = "Repost";
+"grin.node.configNode" = "Configurate Full Node.";
+"grin.node.addNode" = "Add New Full Node";
+"grin.node.edit.nodeAddressTitle" = "Full Node Address";
+"grin.node.edit.apiSecretTitle" = "Key";
+"grin.node.select.canNotConnect" = "Failed to connect with the full node.";
+"grin.detail.slateCopied" = "Slate ID Copied.";
+"grin.send.illegalAmmount" = "Illegal transfer amount";
+"grin.detail.gatewayResend" = "Request for Vite gateway to Resend";
 
 
 
