--- a/ViteBusiness/Assets/en.lproj/Localizable.strings
+++ b/ViteBusiness/Assets/en.lproj/Localizable.strings
@@ -141,6 +141,7 @@
 "transaction.list.transaction.type.name.coin" = "Token Issuance";
 "transaction.list.transaction.type.name.cancelCoin" = "Withdrawal of staking tokens";
 "transaction.list.transaction.type.name.transfer" = "Transfer";
+"transaction.list.transaction.netErrorAndShowAccount" = "网络错误，点击查看账户详情";
 
 /* BalanceInfo */
 "balance.info.detail.balance.title" = "Balance";
@@ -574,6 +575,7 @@
 "crosschain.deposit.about" = "<h1 style=\"font-PingFangSC-Medium;font-size:12;color:#24272B\">关于跨链充值</h1><p style=\"font-PingFangSC-Regular;font-size:11;color:#3E4A59\">跨链充值操作是将%@跨链映射至Vite网络，充值后您可以通过跨链提现转出。Vite钱包跨链充值是使用Vite钱包%@余额进行充值。</p>";
 "crosschain.withdraw.eth.myAddress" = "我的ETH地址";
 "crosschain.deposit.min" = "最少充值";
+"crosschain.withdraw.min" = "最少提现";
 "crosschain.deposit.min.alert" = "充值金额不得少于";
 "crosschain.deposit.all" = "全部充值";
 "crosschain.deposit.amount" = "充值金额";
@@ -589,5 +591,8 @@
 "crosschain.tokenDetail.issuance.false" = "不可增发";
 "crosschain.tokenDetail.date" = "发行日期：";
 "crosschain.tokenDetail.desc" = "代币描述：";
-
+"crosschain.status.waitToConfirm" = "%@链待确认";
+"crosschain.status.confirmed" = "已完成";
+"crosschain.status.gatewayReceived" = "网关已接收";
+"crosschain.status.failedBecausePoor" = "对手链交易金额小于最小转入金额，转入流程结束";
 
