--- a/ViteBusiness/Assets/en.lproj/Localizable.strings
+++ b/ViteBusiness/Assets/en.lproj/Localizable.strings
@@ -559,39 +559,41 @@
 
 
 // CrossChain Deposit & Withdraw
-"crosschain.tokendetail" = "代币详情";
-"crosschain.deposit" = "跨链充值";
-"crosschain.withdraw" = "跨链提现";
-"crosschain.withdraw.btnTitle" = "提现";
-"crosschain.deposit.btnTitle" = "充值";
-"crosschain.deposit.vitewallet" = "Vite钱包充值";
-"crosschain.deposit.otherwallet" = "其他钱包充值";
-"crosschain.deposit.history" = "充值记录";
-"crosschain.withdraw.history" = "提现记录";
-"crosschain.deposit.minAmountDesc" = "提示\n最小充值金额为%@ ，若充值金额小于最小充值金额，将可能导致充值失败。";
-"crosschain.deposit.address" = "充值地址";
-"crosschain.deposit.scanAddress" = "请扫面二维码充值";
-"crosschain.deposit.about" = "<h1 style=\"font-PingFangSC-Medium;font-size:12;color:#24272B\">关于跨链充值</h1><p style=\"font-PingFangSC-Regular;font-size:11;color:#3E4A59\">跨链充值操作是将%@跨链映射至Vite网络，充值后您可以通过跨链提现转出。Vite钱包跨链充值是使用Vite钱包%@余额进行充值。</p>";
-"crosschain.withdraw.eth.myAddress" = "我的ETH地址";
-"crosschain.deposit.min" = "最少充值";
-"crosschain.withdraw.min" = "最少提现";
-"crosschain.deposit.min.alert" = "充值金额不得少于";
-"crosschain.deposit.all" = "全部充值";
-"crosschain.deposit.amount" = "充值金额";
-"crosschain.tokenDetail.shortname" = "代币简称：";
-"crosschain.tokenDetail.id" = "代币ID：";
-"crosschain.tokenDetail.name" = "代币名称：";
-"crosschain.tokenDetail.address" = "铸币地址：";
-"crosschain.tokenDetail.amount" = "发行总量：";
-"crosschain.tokenDetail.digit" = "小数位：";
-"crosschain.tokenDetail.unit" = "位";
-"crosschain.tokenDetail.issuance" = "可否增发：";
-"crosschain.tokenDetail.issuance.true" = "可增发";
-"crosschain.tokenDetail.issuance.false" = "不可增发";
-"crosschain.tokenDetail.date" = "发行日期：";
-"crosschain.tokenDetail.desc" = "代币描述：";
-"crosschain.status.waitToConfirm" = "%@链待确认";
-"crosschain.status.confirmed" = "已完成";
-"crosschain.status.gatewayReceived" = "网关已接收";
-"crosschain.status.failedBecausePoor" = "对手链交易金额小于最小转入金额，转入流程结束";
+
+"crosschain.tokendetail" = "Token Details";
+"crosschain.deposit" = "Cross-chain Deposit";
+"crosschain.withdraw" = "Cross-chain Withdraw";
+"crosschain.withdraw.btnTitle" = "Withdraw";
+"crosschain.deposit.btnTitle" = "Deposit";
+"crosschain.deposit.vitewallet" = "Vite Wallet Deposit";
+"crosschain.deposit.otherwallet" = "Other Wallet Deposit";
+"crosschain.deposit.history" = "Deposit History";
+"crosschain.withdraw.history" = "Withdraw History";
+"crosschain.deposit.minAmountDesc" = "Notice\nThe minimum deposit amount is%@ ,if amount less than minimum amount, it will lead to deposit failure.";
+"crosschain.deposit.address" = "Deposit Address";
+"crosschain.deposit.scanAddress" = "Please scan the QR code to deposit";
+"crosschain.deposit.about" = "<h1 style=\"font-PingFangSC-Medium;font-size:12;color:#24272B\">About Cross-chain</h1><p style=\"font-PingFangSC-Regular;font-size:11;color:#3E4A59\">Cross-chain deposit is to map %@ to Vite chain, after deposit, you can get back ETH through cross-chain withdraw. Vite Wallet cross-chain deposit is to use Vite Wallet %@ balance to deposit.</p>";
+"crosschain.withdraw.eth.myAddress" = "ETH Address";
+"crosschain.deposit.min" = "The minimum deposit amount is ";
+"crosschain.withdraw.min" = "The minimum withdraw amount is ";
+"crosschain.deposit.min.alert" = "Deposit amount should be over ";
+"crosschain.deposit.all" = "All";
+"crosschain.deposit.amount" = "Deposit Amount";
+"crosschain.tokenDetail.shortname" = "Token Abbreviation: ";
+"crosschain.tokenDetail.id" = "Token ID: ";
+"crosschain.tokenDetail.name" = "Token Name: ";
+"crosschain.tokenDetail.address" = "Issue Address";
+"crosschain.tokenDetail.amount" = "Total Issuance:";
+"crosschain.tokenDetail.digit" = "Decimals";
+"crosschain.tokenDetail.unit" = "";
+"crosschain.tokenDetail.issuance" = "Open to Additional Issue:";
+"crosschain.tokenDetail.issuance.true" = "Yes";
+"crosschain.tokenDetail.issuance.false" = "No";
+"crosschain.tokenDetail.date" = "Issuance Date";
+"crosschain.tokenDetail.desc" = "Token Discription";
+"crosschain.status.waitToConfirm" = "%@ Chain Unconfirmed";
+"crosschain.status.confirmed" = "Completed";
+"crosschain.status.gatewayReceived" = "Gateway Received";
+"crosschain.status.failedBecausePoor" = "The amount from the corresponding chain is less than the minimum amount, deposit falure";
+"crosschain.withdraw.fee.desc" = "Ethereum transaction fee is included.";
 
