--- a/ViteBusiness/Assets/zh-Hans.lproj/Localizable.strings
+++ b/ViteBusiness/Assets/zh-Hans.lproj/Localizable.strings
@@ -575,7 +575,7 @@
 "crosschain.withdraw.history" = "提现记录";
 "crosschain.deposit.minAmountDesc" = "提示\n最小充值金额为%@ ，若充值金额小于最小充值金额，将可能导致充值失败。";
 "crosschain.deposit.address" = "充值地址";
-"crosschain.deposit.scanAddress" = "请扫面二维码充值";
+"crosschain.deposit.scanAddress" = "请扫描二维码充值";
 "crosschain.deposit.about" = "<h1 style=\"font-PingFangSC-Medium;font-size:12;color:#24272B\">关于跨链充值</h1><p style=\"font-PingFangSC-Regular;font-size:11;color:#3E4A59\">跨链充值操作是将%@跨链映射至Vite网络，充值后您可以通过跨链提现转出。Vite钱包跨链充值是使用Vite钱包%@余额进行充值。</p>";
 "crosschain.withdraw.eth.myAddress" = "我的ETH地址";
 "crosschain.deposit.min" = "最少充值";
@@ -589,7 +589,7 @@
 "crosschain.tokenDetail.address" = "铸币地址：";
 "crosschain.tokenDetail.amount" = "发行总量：";
 "crosschain.tokenDetail.digit" = "小数位：";
-"crosschain.tokenDetail.unit" = "位";
+"crosschain.tokenDetail.unit" = "";
 "crosschain.tokenDetail.issuance" = "可否增发：";
 "crosschain.tokenDetail.issuance.true" = "可增发";
 "crosschain.tokenDetail.issuance.false" = "不可增发";
@@ -599,6 +599,8 @@
 "crosschain.status.confirmed" = "已完成";
 "crosschain.status.gatewayReceived" = "网关已接收";
 "crosschain.status.failedBecausePoor" = "对手链交易金额小于最小转入金额，转入流程结束";
+"crosschain.withdraw.fee.desc" = "此手续费包含以太矿工费用";
+
 
 
 
