--- a/ViteBusiness/Assets/zh-Hans.lproj/Localizable.strings
+++ b/ViteBusiness/Assets/zh-Hans.lproj/Localizable.strings
@@ -573,7 +573,7 @@
 "crosschain.deposit.otherwallet" = "其他钱包充值";
 "crosschain.deposit.history" = "充值记录";
 "crosschain.withdraw.history" = "提现记录";
-"crosschain.deposit.minAmountDesc" = "提示\n最小充值金额为%@ ，若充值金额小于最小充值金额，将可能导致充值失败。";
+"crosschain.deposit.minAmountDesc" = "最小充值金额为%@ ，若充值金额小于最小充值金额，将可能导致充值失败。";
 "crosschain.deposit.address" = "充值地址";
 "crosschain.deposit.scanAddress" = "请扫描二维码充值";
 "crosschain.deposit.about" = "<h1 style=\"font-PingFangSC-Medium;font-size:12;color:#24272B\">关于跨链充值</h1><p style=\"font-PingFangSC-Regular;font-size:11;color:#3E4A59\">跨链充值操作是将%@跨链映射至Vite网络，充值后您可以通过跨链提现转出。Vite钱包跨链充值是使用Vite钱包%@余额进行充值。</p>";
@@ -600,6 +600,7 @@
 "crosschain.status.gatewayReceived" = "网关已接收";
 "crosschain.status.failedBecausePoor" = "对手链交易金额小于最小转入金额，转入流程结束";
 "crosschain.withdraw.fee.desc" = "此手续费包含以太矿工费用";
+"crosschain.withdraw.aboutfee" = "关于手续费";
 
 
 
