change crosschain context

--- a/ViteBusiness/Assets/en.lproj/Localizable.strings
+++ b/ViteBusiness/Assets/en.lproj/Localizable.strings
@@ -558,27 +558,27 @@
 "grin.detail.gatewayResend" = "Request for Vite gateway to Resend";
 
 
-// CrossChain Deposit & Withdraw
+// CrossChain Transfer & Receive
 
 "crosschain.tokendetail" = "Token Details";
-"crosschain.deposit" = "Deposit (Cross-Chain)";
-"crosschain.withdraw" = "Withdraw (Cross-Chain)";
-"crosschain.withdraw.btnTitle" = "Withdraw";
-"crosschain.deposit.btnTitle" = "Deposit";
-"crosschain.deposit.vitewallet" = "Deposit from Vite Wallet";
-"crosschain.deposit.otherwallet" = "Deposit from Another Wallet";
-"crosschain.deposit.history" = "Deposit History";
-"crosschain.withdraw.history" = "Withdraw History";
-"crosschain.deposit.minAmountDesc" = "The required minimum deposit amount is %@. If you try to deposit an amount less than this threshold, the transaction may fail.";
-"crosschain.deposit.address" = "Deposit Address";
-"crosschain.deposit.scanAddress" = "Scan QR Code to Deposit";
-"crosschain.deposit.about" = "<h1 style=\"font-PingFangSC-Medium;font-size:12;color:#24272B\">About Cross-Chain Deposits</h1><p style=\"font-PingFangSC-Regular;font-size:11;color:#3E4A59\">Making a cross-chain deposit allows %@ to be mapped into the Vite network. After that, you will also be able to make a cross-chain withdraw. %@ balance in your Vite wallet will be reduced accordingly when you make a cross-chain deposit from your Vite wallet.</p>";
+"crosschain.deposit" = "Cross-Chain Receive";
+"crosschain.withdraw" = "Cross-Chain Transfer";
+"crosschain.withdraw.btnTitle" = "Transfer";
+"crosschain.deposit.btnTitle" = "Receive";
+"crosschain.deposit.vitewallet" = "Receive from Vite Wallet";
+"crosschain.deposit.otherwallet" = "Receive from Another Wallet";
+"crosschain.deposit.history" = "Receive History";
+"crosschain.withdraw.history" = "Transfer History";
+"crosschain.deposit.minAmountDesc" = "The required minimum receive amount is %@. If you try to receive an amount less than this threshold, the transaction will fail.";
+"crosschain.deposit.address" = "Receive Address";
+"crosschain.deposit.scanAddress" = "Scan QR Code to Receive";
+"crosschain.deposit.about" = "<h1 style=\"font-PingFangSC-Medium;font-size:12;color:#24272B\">About Cross-Chain Receive</h1><p style=\"font-PingFangSC-Regular;font-size:11;color:#3E4A59\">Making a cross-chain receive allows %@ to be mapped into the Vite network. After that, you will also be able to make a cross-chain transfer. %@ balance in your Vite wallet will be reduced accordingly when you make a cross-chain receive from your Vite wallet.</p>";
 "crosschain.withdraw.eth.myAddress" = "My ETH Address";
-"crosschain.deposit.min" = "Minimum Deposit ";
-"crosschain.withdraw.min" = "Minimum Withdraw ";
-"crosschain.deposit.min.alert" = "The deposit amount cannot be less than ";
-"crosschain.deposit.all" = "Deposit All";
-"crosschain.deposit.amount" = "Deposit Amount";
+"crosschain.deposit.min" = "Minimum Receive ";
+"crosschain.withdraw.min" = "Minimum Transfer ";
+"crosschain.deposit.min.alert" = "The receive amount cannot be less than ";
+"crosschain.deposit.all" = "Receive All";
+"crosschain.deposit.amount" = "Receive Amount";
 "crosschain.tokenDetail.shortname" = "Symbol";
 "crosschain.tokenDetail.id" = "Token ID";
 "crosschain.tokenDetail.name" = "Token Name";
@@ -594,7 +594,7 @@
 "crosschain.status.waitToConfirm" = "%@ Chain Unconfirmed";
 "crosschain.status.confirmed" = "Confirmed";
 "crosschain.status.gatewayReceived" = "Received by Gateway";
-"crosschain.status.failedBecausePoor" = "Transaction amount is less than minimum amount";
+"crosschain.status.failedBecausePoor" = "Transaction amount is less than minimum amount. Transaction failed.";
 "crosschain.withdraw.fee.desc" = "Ethereum transaction fee is included.";
 "crosschain.withdraw.aboutfee" = "About Fee";
 "crosschain.status.failed" = "Failed";
