--- a/ViteBusiness/Assets/en.lproj/Localizable.strings
+++ b/ViteBusiness/Assets/en.lproj/Localizable.strings
@@ -21,6 +21,7 @@
 "Update.app" = "Update App";
 "Submit.cancel" = "Cancel";
 "Close" = "Close";
+"Quit" = "Quit";
 "web.page.host.tip"="This page is provided by %@";
 
 /* Login */
@@ -606,17 +607,19 @@
 "crosschain.withdraw.gatewayispoor" = "Amount exceeds the %@-%@ limit, please contact gateway@vite.org to transfer out.";
 
 /* Vite Bifrost */
-"bifrost.connect.tip.in.wallet.home" = "WallectConnect 连接中";
+"bifrost.connect.tip.in.wallet.home" = "ViteBifrost 连接中";
 "bifrost.alert.tip.title" = "温馨提示";
 "bifrost.alert.approve.session.message" = "请确认是否首选如下链接\n%@";
-"bifrost.alert.switch.address.message" = "您当前城处于WalletConnect链接中，切换地址将断开链接，请确认是否切换地址";
+"bifrost.alert.switch.address.message" = "您当前处于 ViteBifrost 连接中，切换地址将断开链接，请确认是否切换地址";
 
-"bifrost.home.page.free.header" = "WallectConnect 连接中";
+"bifrost.alert.quit.title" = "确认是否退出 ViteBifrost?";
+
+"bifrost.home.page.free.header" = "ViteBifrost 连接中";
 "bifrost.home.page.free.content" = "当前暂无交易";
 
-"bifrost.home.page.busy.header" = "您正在web端进行%@操作";
+"bifrost.home.page.busy.header" = "您正在web端进行操作";
 "bifrost.home.page.busy.content" = "请确认如下交易信息";
-
+"bifrost.toast.operation.success" = "操作成功";
 
 // operation
 "bifrost.operation.register.sbp" = "注册SBP";
