--- a/ViteBusiness/Assets/zh-Hans.lproj/Localizable.strings
+++ b/ViteBusiness/Assets/zh-Hans.lproj/Localizable.strings
@@ -602,6 +602,12 @@
 "crosschain.withdraw.fee.desc" = "此手续费包含以太矿工费用";
 "crosschain.withdraw.aboutfee" = "关于手续费";
 "crosschain.status.failed" = "转入失败";
+"crosschain.beta.alert" = "当前网关为beta版，请不要转入大额资产";
+"crosschain.fee" = "手续费";
+"crosschain.withdraw.gatewayispoor" = "转出金额超出最高限额，请联系gateway@vite.org.";
+
+
+
 
 
 
