--- a/ViteBusiness/Assets/zh-Hans.lproj/Localizable.strings
+++ b/ViteBusiness/Assets/zh-Hans.lproj/Localizable.strings
@@ -573,7 +573,7 @@
 "crosschain.deposit.otherwallet" = "其他钱包转入";
 "crosschain.deposit.history" = "转入记录";
 "crosschain.withdraw.history" = "转出记录";
-"crosschain.deposit.minAmountDesc" = "最小转入金额为%@ ，若转入金额小于最小转入金额，将可能导致转入失败。";
+"crosschain.deposit.minAmountDesc" = "最小转入金额为%@ ，若转入金额小于最小转入金额，将导致转入失败。";
 "crosschain.deposit.address" = "转入地址";
 "crosschain.deposit.scanAddress" = "请扫描二维码转入";
 "crosschain.deposit.about" = "<h1 style=\"font-PingFangSC-Medium;font-size:12;color:#24272B\">关于跨链转入</h1><p style=\"font-PingFangSC-Regular;font-size:11;color:#3E4A59\">跨链转入操作是将%@跨链映射至Vite网络，转入后您可以通过跨链转出。Vite钱包跨链转入是使用Vite钱包%@余额进行转入。</p>";
@@ -597,8 +597,10 @@
 "crosschain.tokenDetail.desc" = "代币描述";
 "crosschain.status.waitToConfirm" = "%@链待确认";
 "crosschain.status.confirmed" = "已完成";
+"crosschain.status.tot.exceed.limit" = "超过限额";
+"crosschain.status.wrong.address" = "转出地址错误";
 "crosschain.status.gatewayReceived" = "网关已接收";
-"crosschain.status.failedBecausePoor" = "交易金额小于最小转入金额，转入失败";
+"crosschain.status.failedBecausePoor" = "转入金额过小";
 "crosschain.withdraw.fee.desc" = "此手续费包含以太矿工费用";
 "crosschain.withdraw.aboutfee" = "关于手续费";
 "crosschain.status.failed" = "转入失败";
