--- a/ViteBusiness/Assets/zh-Hans.lproj/Localizable.strings
+++ b/ViteBusiness/Assets/zh-Hans.lproj/Localizable.strings
@@ -577,6 +577,7 @@
 "crosschain.deposit.address" = "转入地址";
 "crosschain.deposit.scanAddress" = "请扫描二维码转入";
 "crosschain.deposit.about" = "<h1 style=\"font-PingFangSC-Medium;font-size:12;color:#24272B\">关于跨链转入</h1><p style=\"font-PingFangSC-Regular;font-size:11;color:#3E4A59\">跨链转入操作是将%@跨链映射至Vite网络，转入后您可以通过跨链转出。Vite钱包跨链转入是使用Vite钱包%@余额进行转入。</p>";
+"crosschain.deposit.other.about" = "<h1 style=\"font-PingFangSC-Medium;font-size:12;color:#24272B\">关于跨链转入</h1><p style=\"font-PingFangSC-Regular;font-size:11;color:#3E4A59\">跨链转入操作是将%@跨链映射至Vite网络，转入后您可以通过跨链转出。</p>";
 "crosschain.withdraw.eth.myAddress" = "我的ETH地址";
 "crosschain.deposit.min" = "最少转入";
 "crosschain.withdraw.min" = "最少转出";
@@ -600,6 +601,7 @@
 "crosschain.status.tot.exceed.limit" = "超过限额";
 "crosschain.status.wrong.address" = "转出地址错误";
 "crosschain.status.gatewayReceived" = "网关已接收";
+"crosschain.status.withdraw.failed" = "转出失败";
 "crosschain.status.failedBecausePoor" = "转入金额过小";
 "crosschain.withdraw.fee.desc" = "此手续费包含以太矿工费用";
 "crosschain.withdraw.aboutfee" = "关于手续费";
