--- a/ViteBusiness/Assets/zh-Hans.lproj/Localizable.strings
+++ b/ViteBusiness/Assets/zh-Hans.lproj/Localizable.strings
@@ -615,14 +615,16 @@
 
 
 /* Vite Bifrost */
-"bifrost.connect.tip.in.wallet.home" = "ViteBifrost 连接中";
+"bifrost.connect.tip.in.wallet.home" = "ViteBifrost 已连接";
 "bifrost.alert.tip.title" = "温馨提示";
 "bifrost.alert.approve.session.message" = "请确认是否首选如下链接:\n%@";
+"bifrost.alert.approve.session.again.message" = "你都连了一个了还连，你要干嘛，请确认是否首选如下链接\n%@";
+"bifrost.alert.approve.session.another.address.message" = "上一次用的这个%@地址，这次是这个%@地址，请确认是否首选如下链接\n%@";
 "bifrost.alert.switch.address.message" = "您当前处于 ViteBifrost 连接中，切换地址将断开链接，请确认是否切换地址";
 
 "bifrost.alert.quit.title" = "确认是否退出 ViteBifrost?";
 
-"bifrost.home.page.free.header" = "ViteBifrost 连接中";
+"bifrost.home.page.free.header" = "ViteBifrost 已连接";
 "bifrost.home.page.free.content" = "当前暂无交易";
 
 "bifrost.home.page.busy.header" = "您正在web端进行操作";
